# Android-as_CameraPreviewRecorder-master

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/camerapreviewrecorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/camera_preview/: CMakeLists.txt  mv_recording_preview_controller.h
app/src/main/cpp/libcommon/: CMakeLists.txt
app/src/main/cpp/libcommon/egl_core/: egl_share_context.h
app/src/main/cpp/libcommon/message_queue/: handler.h
app/src/main/cpp/libcommon/opengl_media/render/: video_gl_surface_render.cpp  video_gl_surface_render.h
app/src/main/cpp/libcommon/opengl_media/texture/: texture_frame.h
app/src/main/cpp/video_encoder/: CMakeLists.txt  live_video_packet_queue.h  video_encoder_adapter.h
app/src/main/cpp/video_encoder/soft_encoder/: video_x264_encoder.h
app/src/main/cpp/video_encoder/soft_encoder/color_conversion/: color_conversion.h
app/src/main/java/com/changba/songstudio/video/encoder/: MediaCodecSurfaceEncoder.java
app/src/main/java/com/phuket/tour/camera/: MainActivity.java
app/src/main/java/com/phuket/tour/camera/preview/: ChangbaRecordingPreviewScheduler.java  ChangbaVideoCamera.java
app/src/test/java/com/wind/camerapreviewrecorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
